[project]
name = "farsounder-drawing-example"
version = "0.1.0"
description = "Get some data from using the FarSounder SDK and show it."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "farsounder>=0.1.1",
    "matplotlib>=3.10.8",
    "rerun-sdk>=0.30.2",
    "scipy>=1.17.1",
    "utm>=0.8.1",
]
